# gemini

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
src/: __main__.py
src/bot/: __init__.py  bot.py
src/cogs/: moderation.py  ping.py  vincentrps.py
src/data/: 0001-init.sql
src/database/: connection.py
src/helpers/: checks.py  config.py  errors.py
src/models/: backupnames.py  fuzzy.py  infraction.py  sphinxreader.py
